external-projects/sui-prover/crates/sui-prover/tests/snapshots/spec_limited/simple.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 149
expression: output
---
exiting with verification errors
error: function code should not abort
  ┌─ tests/inputs/spec_limited/simple.fail.move:6:8
  │
6 │     (x * y) as u32
  │        ^
  │
  =     at tests/inputs/spec_limited/simple.fail.move:5: test_spec_limited_abort
